# scan-and-create-copy-of-data

./: .coverage  .gitignore  .pre-commit-config.yaml  .scanignore  AntigravityScanner.spec  COMPREHENSIVE_REBUILD_PROMPT.md  README.md  SSOT.md  antigravity_scanner.db  antigravity_scanner.db-shm  antigravity_scanner.db-wal  build_exe.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
.github/workflows/: ci.yml
data/: app_settings.json  config_profiles.json  index.json  index.md  scan_files.json  scans.json  summary.json
src/antigravity/: __init__.py  __main__.py  cli.py
src/antigravity/cli/: __init__.py  commands.py  prompts.py
src/antigravity/core/: chunk_manager.py  filters.py  scanner.py  writer.py
src/antigravity/gui/: app.py  components.py  controllers.py  theme.py
src/antigravity/gui/components/: __init__.py  buttons.py  cards.py  inputs.py  misc.py
src/antigravity/gui/views/: history_view.py  scan_view.py  scanner_view.py  settings_view.py  toolkit_view.py
src/antigravity/models/: __init__.py
src/antigravity/schemas/: config.py
src/antigravity/services/: __init__.py  config.py  database.py  history.py  json_store.py  logger.py  settings.py
src/antigravity/tools/: clean_duplicate_suffixes.py  delete_empty_folders.py  file_organizer_toolkit.py  flatten_nested_files.py  prefix_files_with_folder.py  system_cleanup.bat
src/antigravity/utils/: encoding_utils.py  file_utils.py  logger.py
src/antigravity_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/data/: app_settings.json  config_profiles.json  incremental_cache.json  scan_files.json  scans.json
tests/: test_scanner.py  test_services.py
