[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-scanner"
version = "2.0.0"
description = "High-performance codebase scanner and text extractor for LLM/RAG preparation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Antigravity Team", email = "dev@antigravity.local"}
]
keywords = ["scanner", "rag", "llm", "code-analysis", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PyQt6>=6.6.0",
    "typer[all]>=0.9.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.7.0",
    "blake3>=0.4.0",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "python-magic>=0.4.27; sys_platform != 'win32'",
    "chardet>=5.2.0",
    "pathspec>=0.12.0",
    "psutil>=5.9.0",
    "orjson>=3.9.0",
    "qasync>=0.27.1",
    "xxhash>=3.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "pre-commit>=3.6.0",
    "hypothesis>=6.90.0",
]
analytics = [
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
]
ai = [
    "ollama>=0.1.0",
    "openai>=1.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]
extractors = [
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

[project.scripts]
antigravity = "antigravity.cli:app"
antigravity-gui = "antigravity.__main__:main"

[project.gui-scripts]
antigravity-gui = "antigravity.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--cov=src/antigravity --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
qt_api = "pyqt6"

[tool.black]
line-length = 100
target-version = ['py39']
